build: target java 17 baseline